# sbkg-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: examples.md  llm-usage-guide.md
ontology/: dc.ttl  doap.ttl  sbkg.ttl  skos.ttl
src/sbkg_mcp/: __init__.py  __main__.py  email_parser.py  markdown_parser.py  models.py  ontology.py  paths.py  server.py  store.py  utils.py
tests/: test_email_parser.py  test_markdown_parser.py  test_ontology.py  test_store.py  test_tools.py
